<resources>
    <string name="app_name">App20190608 1508</string>

    <string name="btn_to_authentication">Firebase Authentication</string>

    <string name="btn_to_post_webservice">Post Webservice</string>
    <string name="pws_tv_return">Post Webservice and see the return value here</string>
    <string name="pws_click">Connect</string>
    <string name="pws_label_url">URL:</string>
    <string-array name="pws_arr_url">
        <item>https://easonwebservice.000webhostapp.com/Android/saveData.php</item>
        <item>https://deberra.000webhostapp.com/saveName.php</item>
        <item>http://192.168.56.101/api/Member/Register</item>
        <item>http://10.120.5.29/Android/saveName.php</item>
    </string-array>
    <string name="pws_label_http_method">HTTP method</string>
    <string name="pws_value_http_method">POST</string>
    <string name="pws_label_rp_ct">Request Property - Content Type</string>
    <string name="pws_rp_ct_1">application/x-www-form-urlencoded</string>
    <string name="pws_rp_ct_2">application/json</string>
    <string name="pws_label_email">Email(unique):</string>
    <string name="pws_value_email">kd@gsw.com</string>
    <string name="pws_label_surname">Surname:</string>
    <string name="pws_value_surname">Kelvin</string>
    <string name="pws_label_givenName">Givenname:</string>
    <string name="pws_value_givenName">Durant</string>

    <string name="baseadapter_listview_button">ListView(BaseAdapter)</string>
    <string name="simpleadapter_listview_button">ListView(SimpleAdapter)</string>

    <string name="btn_to_webview">WebView</string>
    <string name="wv_editext">URL here</string>
    <string name="wv_btn">Search</string>

    <string name="btn_to_matching_game">Matching Game</string>
    <string name="mg_content_description">card</string>
    <string-array name="image_file_names">
        <item>mg_colour1</item>
        <item>mg_colour2</item>
        <item>mg_colour3</item>
        <item>mg_colour4</item>
    </string-array>

    <string name="btn_to_navigation_drawer">Navigation Drawer</string>
    <string name="title_top">Top fragment</string>
    <string-array name="titles">
        <item>Home</item>
        <item>Golden State Warrier</item>
        <item>Houston Rocket</item>
        <item>Cleveland Cavalier</item>
    </string-array>
    <string-array name="pizzas">
        <item>Stephen Curry</item>
        <item>Kelvin Durant</item>
        <item>Klay Thompson</item>
    </string-array>
    <string-array name="pasta">
        <item>Leborn James</item>
        <item>Kelvin Love</item>
    </string-array>
    <string-array name="stores">
        <item>Chris Paul</item>
        <item>James Harden</item>
    </string-array>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="btn_to_actionbar">Action Bar</string>
    <string name="action_settings">Action Settings</string>
    <string name="action_create_order">Create Order</string>
    <string name="action_share">Share</string>

    <string name="btn_to_bound_service">GPS(Bound Service)</string>
    <string name="bound_service_btn1_text">Start</string>
    <string name="bound_service_btn2_text">Stop</string>
    <string name="bound_service_btn3_text">Reset</string>

    <string name="btn_to_started_service">MP3, Notification(Started Service)</string>
    <string name="started_service_btn_response">DelayedMessageService is created.</string>
    <string name="started_service_btn1_text">Click to wait for notification</string>
    <string name="started_service_btn_start_mp3">Play MP3</string>
    <string name="started_service_btn_pause_mp3">Pause MP3</string>
    <string name="started_service_btn_stop_mp3">Stop MP3</string>
    <string-array name="started_service_mp3_list">
        <item>Yoga Lin</item>
        <item>Jay Chow</item>
        <item>G Dragon</item>
    </string-array>


    <string name="btn_to_broadcast_receiver">BroadcastReceiver/ Notification</string>
    <string name="hello_broadcast_receiver">Hello BroadcastReceiver</string>
    <string name="Notification_1">Notification 1</string>
    <string name="Notification_2">Notification 2</string>
    <string name="Notification_3">Notification 3</string>
    <string name="Notification_4">Notification 4</string>
    <string name="Notification_5">Notification 5</string>


    <string name="btn_to_fragment">Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_to_listview">Starbuzz App (SQLite)</string>
    <string name="coffee_logo">Starbuzz App Logo</string>
    <string-array name="options">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>
    <string name="title_activity_drink_category">DrinkCategoryActivity Label</string>
    <string name="favorite">Favorite</string>

    <string name="layout_activity_button">Layout</string>
    <string name="layout_activity_image_button">Image Button of LayoutActivity</string>

    <string name="btn_to_car_park_timer">停車場計時器</string>
    <string name="car_park_start_date">入場日期</string>
    <string name="car_park_start_time">入場時間</string>
    <string name="car_park_end_date">離埸日期</string>
    <string name="car_park_end_time">離埸時間</string>
    <string name="car_park_charge_message">每小時收費</string>

    <string name="btn_to_timer">Timer</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="hello_article_fragment">Hello article fragment</string>
    <string name="hello_headlines_fragment">Hello headlines fragment</string>
    <string name="title_activity_find_beer">FindBeerActivity</string>
    <string name="rotate_to_landscape">landscape</string>

    <string name="btn_to_send_message">Message Sender</string>
    <string name="edit_message">Enter a message</string>
    <string name="text_view">TextView</string>
    <string name="button_send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="brands"></string>
    <string name="find_beer">Find Roster!</string>
    <string-array name="beer_colors">
        <item>Golden State Warriors</item>
        <item>Oklahoma City Thunder</item>
        <item>Cleveland Cavaliers</item>
        <item>Boston Celtics</item>
    </string-array>
    <string name="chooserTitle">Send to below...</string>
</resources>
