<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActionBarActivity">
    <item android:id="@+id/action_create_order"
        android:title="@string/action_create_order"
        android:icon="@drawable/action_new_order"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@mipmap/ic_launcher_round"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <!--app:showAsAction="ifRoom|withText|never|always"-->
</menu>