<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easontesting.myfirstapp.BroadcastReceiverTestActivity">
    <TextView
        android:id="@+id/BroadcastReceiverTestActivity_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/hello_broadcast_receiver"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        />
    <Button
        android:id="@+id/BroadcastReceiverTestActivity_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/hello_broadcast_receiver"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastReceiverTestActivity_textView1"
        android:onClick="createBroadcast"/>
    <Button
        android:id="@+id/BroadcastReceiverTestActivity_Notfiy_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/Notification_1"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastReceiverTestActivity_btn1"
        android:onClick="createNotification1"/>
    <Button
        android:id="@+id/BroadcastReceiverTestActivity_Notfiy_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/Notification_2"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastReceiverTestActivity_Notfiy_btn1"
        android:onClick="createNotification2"/>
    <Button
        android:id="@+id/BroadcastReceiverTestActivity_Notfiy_btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/Notification_3"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastReceiverTestActivity_Notfiy_btn2"
        android:onClick="createNotification3"/>
    <Button
        android:id="@+id/BroadcastReceiverTestActivity_Notfiy_btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/Notification_4"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastReceiverTestActivity_Notfiy_btn3"
        android:onClick="createNotification4"/>
    <Button
        android:id="@+id/BroadcastReceiverTestActivity_Notfiy_btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/Notification_5"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastReceiverTestActivity_Notfiy_btn4"
        android:onClick="createNotification5"/>
</android.support.constraint.ConstraintLayout>
