<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easontesting.myfirstapp.MainActivity">
    <!-- Send Message -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent" />
    <!-- TimerActivity -->
    <Button
        android:id="@+id/timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="onClickToTimer"
        android:text="@string/btn_to_timer"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintLeft_toRightOf="parent"/>
    <!-- CarParkTimer -->
    <Button
        android:id="@+id/car_park_timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="onClickToCarParkTimer"
        android:text="@string/btn_to_car_park_timer"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/timer_button"
        app:layout_constraintLeft_toRightOf="parent"/>
    <!-- LayoutActivity-->
    <Button
        android:id="@+id/layout_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/car_park_timer_button"
        app:layout_constraintLeft_toRightOf="parent"
        android:text="@string/layout_activity_button"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:drawableBottom="@drawable/img3"
        android:onClick="onClickToLayoutActivity"/>
    <ImageView
        android:id="@+id/layout_actiity_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/car_park_timer_button"
        app:layout_constraintLeft_toRightOf="@+id/layout_activity_button"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:src="@drawable/img1"
        android:contentDescription="@string/layout_activity_image_button"
        android:onClick="onClickToLayoutActivity"/>
    <ImageButton
        android:id="@+id/layout_activity_image_button"
        android:layout_width="80dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toBottomOf="@+id/car_park_timer_button"
        app:layout_constraintLeft_toRightOf="@+id/layout_actiity_image_view"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:src="@drawable/img3"
        android:onClick="onClickToLayoutActivity" />
</android.support.constraint.ConstraintLayout>
