<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easontesting.myfirstapp.BoundServiceActivity">
    <TextView android:id="@+id/bound_service_distance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text=""
    android:layout_centerHorizontal="true"
    android:singleLine="false"
    android:textSize="60dp"
    android:textAppearance="?android:attr/textAppearanceLarge"/>
    <Button android:id="@+id/bound_service_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bound_service_distance"
        android:layout_alignParentLeft="true"
        android:text="@string/bound_service_btn1_text"
        android:onClick="onClcikOdometerStart"/>
    <Button android:id="@+id/bound_service_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bound_service_distance"
        android:layout_toRightOf="@+id/bound_service_btn_start"
        android:text="@string/bound_service_btn2_text"
        android:onClick="onClcikOdometerStop"/>
    <Button android:id="@+id/bound_service_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bound_service_distance"
        android:layout_toRightOf="@+id/bound_service_stop"
        android:text="@string/bound_service_btn3_text"
        android:onClick="onClcikOdometerReset"/>
</RelativeLayout>
